# slidecat

./: .gitignore  README.md  pyproject.toml  requirements.txt
slidecat/: __init__.py  cli.py  core.py
